[project]
name = "dca-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pandas-datareader>=0.10.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "seaborn>=0.13.2",
    "yfinance>=1.3.0",
]
